# qtgimp

./: .gitignore  CMakeLists.txt  README.md  canvas_handler.cpp  canvas_handler.h  canvashandler.cpp  canvashandler.h  image_opener.cpp  imagemodifier.cpp  imagemodifier.h  imageopener.cpp  imageopener.h  main.cpp  main_window.cpp  main_window.h  mainmenubarhandler.cpp  mainmenubarhandler.h  mainwindow.cpp  mainwindow.h  menubar_handler.cpp  menubarhandler.cpp  menubarhandler.h
.cache/clangd/index/: canvashandler.cpp.CE925B655A7C3DC6.idx  canvashandler.h.8F0A436FC95DEDA2.idx  imageopener.cpp.17F210CD393089C6.idx  imageopener.h.55A5F6E7FB39EFC8.idx  main.cpp.31C15AF2BDC034F5.idx  mainwindow.cpp.E8A85D8F4A882269.idx  mainwindow.h.4EE3142D9EAE1F97.idx  menubarhandler.cpp.013AD5E3E10970D0.idx  menubarhandler.h.FF90C7046CEE5D9D.idx
src/ui/: canvas.cpp  canvas.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h
src/utils/: bezier.cpp  bezier.h  image_handler.cpp  image_handler.h  image_modifier.cpp
